syntax = "proto3";

package Messages;

import "test/include.proto";
import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "validate/validate.proto";

option go_package = "all/;all";

service Message {
  rpc ListMessage (ListMessageRequest) returns (ListMessageResponse) {
    option (google.api.http) = {
      get: "/messages"
    };
  }
  rpc UpdateMessage (UpdateMessageRequest) returns (UpdateMessageResponse) {
    option (google.api.http) = {
      put: "/messages"
      body: "*"
    };
  }
  rpc UnboundUnary (UnboundUnaryRequest) returns (UnboundUnaryResponse) {}
}

message ListMessageRequest {
  string query = 1;
  string additional_param = 2;
}

message UpdateMessageRequest {
  string name = 1 [(validate.rules).string.len = 1];
  google.protobuf.FieldMask update_mask = 2;
}

message UpdateMessageResponse {}

message UnboundUnaryRequest {}
message UnboundUnaryResponse {}
